# feup-da

./: README.md
project-1/: CMakeLists.txt  README.md
project-1/codigo/: Armazem.cpp  Armazem.h  Encomenda.cpp  Encomenda.h  Estafeta.cpp  Estafeta.h  LoadData.cpp  LoadData.h  Menu.cpp  Menu.h  main.cpp
project-1/documentacao/: Doxyfile.txt
project-1/documentacao/output/html/: _armazem_8h_source.html  _encomenda_8h_source.html  _estafeta_8h_source.html  _load_data_8h_source.html  annotated.html  class_armazem-members.html  class_armazem.html  class_encomenda-members.html  class_encomenda.html  class_estafeta-members.html  class_estafeta.html  class_load_data-members.html  class_load_data.html  classes.html  dir_413f4e031a85da0d68269c6fd2f76e1c.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
project-1/documentacao/output/html/search/: all_0.js  all_3.js  all_6.js  all_8.js  classes_1.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js
project-1/input/: carrinhas25.txt  carrinhas75.txt  encomendas25.txt  encomendas50.txt  encomendas75.txt  feup_da_GoodsDeliveryLogistics
project-2/: .gitignore  CMakeLists.txt  README.md
project-2/codigo/: Grafo.cpp  Grafo.h  LoadData.cpp  LoadData.h  MaxHeap.h  Menu.cpp  Menu.h  MinHeap.h  main.cpp
project-2/input/: in11_b.txt  projetoDA2
